ingress/deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deploy
spec:
  minReadySeconds: 5
  replicas: 3
  selector:
    matchLabels:
      app: identity
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: identity-pod
      labels:
        app: identity
        version: "1.0.0"
    spec:
      containers:
        - name: identity
          image: wasim78/apps:1.0.0
          ports:
            - containerPort: 80
