ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
spec:
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 80
